@@ -9,14 +9,8 @@
         </LOCALNAMESPACEPATH>
         <IPARAMVALUE NAME="NewInstance">
           <INSTANCE CLASSNAME="CIM_IndicationHandlerCIMXML">
-            <PROPERTY NAME="SystemCreationClassName" TYPE="string">
-              <VALUE>CIM_ComputerSystem</VALUE>
-            </PROPERTY>
             <PROPERTY NAME="SystemName" TYPE="string">
               <VALUE>localhost.localdomain</VALUE>
-            </PROPERTY>
-            <PROPERTY NAME="CreationClassName" TYPE="string"> 
-              <VALUE>CIM_IndicationHandlerCIMXML</VALUE>
             </PROPERTY>
             <PROPERTY NAME="Name" TYPE="string"> 
               <VALUE>Test_Indication_Handler_</VALUE>
